--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -90,6 +90,7 @@ a{
 }
 .poppy-white{
   width: 5rem;
+  height: 100%;
 
   @media only screen and (max-width: 680px) {
     
